# bvh-exp

./: CMakeLists.txt  README.md  bvh_exp.cpp
dataset/: rays  rays.bak
tools/: generate_rays.py
